# RAG-Knowledge-Project

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
app/: pipeline.py
app/api/: routes.py  schemas.py
app/citations/: citation_formatter.py
app/core/: config.py
app/data/index/: index.faiss  metadata.json  registry.json
app/embeddings/: embedder.py
app/evaluation/: evaluator.py  run_evaluations.py  test_set.json
app/ingestion/: chunking.py  pdf_extracter.py  preprocess.py
app/llm/: generator.py
app/retrieval/: reranker.py  retriever.py  vector_store.py
frontend/: dashboard.py
